k8s/gateways.yaml
# gateways.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocelot-api-gateway
  namespace: ecommerce-dev
spec:
  selector:
    matchLabels:
      app: ocelot-api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: ocelot-api-gateway
    spec:
      containers:
      - name: ocelot-api-gateway
        image: ${DOCKER_REGISTRY-}ocelotapigateway
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ocelot-api-gateway
  namespace: ecommerce-dev
spec:
  selector:
    app: ocelot-api-gateway
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: LoadBalancer
