k8s/microservices.yaml
# microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  namespace: ecommerce-dev
spec:
  selector:
    matchLabels:
      app: catalog-api
  replicas: 1
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
      - name: catalog-api
        image: ${DOCKER_REGISTRY-}catalogapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  namespace: ecommerce-dev
spec:
  selector:
    app: catalog-api
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-api
  namespace: ecommerce-dev
spec:
  selector:
    matchLabels:
      app: basket-api
  replicas: 1
  template:
    metadata:
      labels:
        app: basket-api
    spec:
      containers:
      - name: basket-api
        image: ${DOCKER_REGISTRY-}basketapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: basket-api
  namespace: ecommerce-dev
spec:
  selector:
    app: basket-api
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-grpc
  namespace: ecommerce-dev
spec:
  selector:
    matchLabels:
      app: discount-grpc
  replicas: 1
  template:
    metadata:
      labels:
        app: discount-grpc
    spec:
      containers:
      - name: discount-grpc
        image: ${DOCKER_REGISTRY-}discountgrpc
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: discount-grpc
  namespace: ecommerce-dev
spec:
  selector:
    app: discount-grpc
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering-api
  namespace: ecommerce-dev
spec:
  selector:
    matchLabels:
      app: ordering-api
  replicas: 1
  template:
    metadata:
      labels:
        app: ordering-api
    spec:
      containers:
      - name: ordering-api
        image: ${DOCKER_REGISTRY-}orderingapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ordering-api
  namespace: ecommerce-dev
spec:
  selector:
    app: ordering-api
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: ecommerce-dev
spec:
  selector:
    matchLabels:
      app: auth-api
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: ${DOCKER_REGISTRY-}authapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: ecommerce-dev
spec:
  selector:
    app: auth-api
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
